fixed last section image and responsive

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
                 <div class="project-item-desc">
                     <h3>AAA Autohouse</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A vel veritatis ullam nam suscipit repudiandae voluptatem, voluptates corporis distinctio quis sed optio, provident velit non voluptate alias rem eaque magnam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta odit voluptates iste corrupti earum architecto saepe dolorum sequi ad quas. Dolorum, perferendis! Culpa voluptate, at quas nam autem impedit vel.</p>
+                    <p>A fully responsive single page website built for a local automotive service shop.</p>
                     <ul>
                         <li>HTML5</li>
                         <li>CSS3</li>
@@ -106,7 +106,8 @@
     
                 <div class="project-item-desc">
                     <h3>Book Search App</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A vel veritatis ullam nam suscipit repudiandae voluptatem, voluptates corporis distinctio quis sed optio, provident velit non voluptate alias rem eaque magnam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta odit voluptates iste corrupti earum architecto saepe dolorum sequi ad quas. Dolorum, perferendis! Culpa voluptate, at quas nam autem impedit vel.</p>
+                    <p>A fully responsive web application for searching for book information.</p>
+                    <p>The NYTimes API is used for fetching the top 10 best sellers list on the home page.</p>
                     <ul>
                         <li>HTML5</li>
                         <li>CSS3</li>
@@ -141,11 +142,10 @@
     
                 <div class="project-item-desc">
                     <h3>Restaurant</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A vel veritatis ullam nam suscipit repudiandae voluptatem, voluptates corporis distinctio quis sed optio, provident velit non voluptate alias rem eaque magnam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta odit voluptates iste corrupti earum architecto saepe dolorum sequi ad quas. Dolorum, perferendis! Culpa voluptate, at quas nam autem impedit vel.</p>
+                    <p>A fully repsonsive PSD conversion of a restaurant website.</p>
                     <ul>
                         <li>HTML5</li>
                         <li>CSS3</li>
-                        <li>JQuery</li>
                         <li>Responsive</li>
                     </ul>
                 </div>
