--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Patua+One|Rubik" rel="stylesheet">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -48,23 +48,102 @@
                             <h1>About</h1>
                         </div>
                 <div class="about-text">
-                    <p>My name is Lala. I am a Front End Developer based in Toronto. I have a passion for creating beautiful, reponsive and accessible web applications using the most modern technologies.I have a background in Hospitality and have always enjoyed working with fast-paced cross-functional teams.When I am not exploring a new technology, I am exploring new dessert recipes.</p>
+                    <p>My name is Lala. I am a Front End Developer based in Toronto. I have a passion for creating beautiful, reponsive and accessible web applications using the most modern technologies. I have a background in Hospitality and have always enjoyed working with fast-paced cross-functional teams. When I am not exploring a new technology, I am exploring new dessert recipes.</p>
                 </div>
                 <div>
                     <h2>Tools</h2>
                 </div>
-                    <ul class="tools">
-                        <li><img src="assets/svg/html-5.svg" alt="html 5"></li>
-                        <li><img src="assets/svg/css-3.svg" alt="css 3"></li>
-                        <li><img src="assets/svg/js.svg" alt="javascript"></li>
-                        <li><img src="assets/svg/github-logo.svg" alt="github"></li>
-                        <li><img src="assets/svg/react.svg" alt="react"></li>
-                        <li><img src="assets/svg/responsive-symbol-with-a-widescreen-monitor-a-cellphone-and-a-tablet.svg" alt="responsive symbol with a widescreen monitor, a cellphone and a tablet"></li>
-                        <li><img src="assets/svg/sass.svg" alt="sass"></li>
-                        <li><img src="assets/svg/icons8-jquery-filled.svg" alt="jQuery"></li>
-                        <li><img src="assets/svg/icons8-firebase.svg" alt="firebase"></li>
-                        <li><img src="assets/svg/icons8-visual-studio.svg" alt="visual studio code"></li>
-                    </ul>
+                <div class="card">
+                    <div class="tools">
+                        <div class="front">
+                            <img src="assets/svg/html-5-logo.svg" alt="html 5">
+                        </div>
+                        <div class="back">
+                            <p>HTML5</p>
+                        </div>
+                    </div>
+
+                    <div class="tools">
+                        <div class="front">
+                            <img src="assets/svg/css-3.svg" alt="css3">
+                        </div>
+                        <div class="back">
+                            <p>CSS3</p>
+                        </div>
+                    </div>
+
+                    <div class="tools">
+                        <div class="front">
+                            <img src="assets/svg/git-logo.svg" alt="git logo">
+                        </div>
+                        <div class="back">
+                            <p>Git</p>
+                        </div>
+                    </div>
+
+                    <div class="tools">
+                        <div class="front">
+                            <img src="assets/svg/icons8-firebase.svg" alt="firebase">
+                        </div>
+                        <div class="back">
+                            <p>Firebase</p>
+                        </div>
+                    </div>
+
+                    <div class="tools">
+                        <div class="front">
+                            <img src="assets/svg/icons8-jquery-filled.svg" alt="JQuery">
+                        </div>
+                        <div class="back">
+                            <p>JQuery</p>
+                        </div>
+                    </div>
+
+                    <div class="tools">
+                        <div class="front">
+                            <img src="assets/svg/icons8-visual-studio.svg" alt="VS code">
+                        </div>
+                        <div class="back">
+                            <p>VS Code</p>
+                        </div>
+                    </div>
+
+                    <div class="tools">
+                        <div class="front">
+                            <img src="assets/svg/js.svg" alt="javascript">
+                        </div>
+                        <div class="back tools-text">
+                            <p>JavaScript</p>
+                        </div>
+                    </div>
+
+                    <div class="tools">
+                        <div class="front">
+                            <img src="assets/svg/react.svg" alt="react">
+                        </div>
+                        <div class="back">
+                            <p>React</p>
+                        </div>
+                    </div>
+
+                    <div class="tools">
+                        <div class="front">
+                            <img src="assets/svg/responsive-symbol-with-a-widescreen-monitor-a-cellphone-and-a-tablet.svg" alt="responsive symbol with a widescreen monitor, cellphone and a tablet">
+                        </div>
+                        <div class="back tools-text">
+                            <p>Responsive Design</p>
+                        </div>
+                    </div>
+
+                    <div class="tools">
+                        <div class="front">
+                            <img src="assets/svg/sass.svg" alt="sass">
+                        </div>
+                        <div class="back">
+                            <p>Sass</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         </div>
@@ -80,17 +159,16 @@
             <div class="project-items">
 
                 <div class="project-item-preview">
-                    <a href="#">
+                    <a href="https://aaaautohouse.ca/">
                         <img src="assets/photos/AAA-Autohouse-screenshot.png" alt="screenshot of AAA Autohouse project">
                     </a>
                     <div class="projects-item-preview-links">
-                        <a href="#">Github</a>
-                        <a href="#">Live</a>
+                        <a href="https://aaaautohouse.ca/">Live</a>
                     </div>
                 </div>
 
                 <div class="project-item-desc">
-                    <h3>AAA Autohouse</h3>
+                    <h2>AAA Autohouse</h2>
                     <p>A fully responsive single page website built for a local automotive service shop.</p>
                     <ul>
                         <li>HTML5</li>
@@ -105,7 +183,7 @@
             <div class="project-items">
     
                 <div class="project-item-desc">
-                    <h3>Book Search App</h3>
+                    <h2>Book Search App</h2>
                     <p>A fully responsive web application for searching for book information.</p>
                     <p>The NYTimes API is used for fetching the top 10 best sellers list on the home page.</p>
                     <ul>
@@ -141,7 +219,7 @@
                 </div>
     
                 <div class="project-item-desc">
-                    <h3>Restaurant</h3>
+                    <h2>Restaurant</h2>
                     <p>A fully repsonsive PSD conversion of a restaurant website.</p>
                     <ul>
                         <li>HTML5</li>
@@ -176,10 +254,19 @@
                     </form>
                 </div>
             </div>
+            <div class="up-arrow">
+                <a href="#about">
+                    <img src="assets/svg/up-arrow.svg" alt="up arrow">
+                    <p>up to top</p>
+                </a>
+            </div>
         </div>
     </section>
 
     <footer class="footer">
+            <div class="footer-copyright">
+                    <p>Lala Manafova ©2019</p>
+                </div> 
         <div class="contact-nav">
             <ul>
                 <li class="contact-icon">
